--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backend": "file:",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.8.4"
+    "mongoose": "^8.8.4",
+    "njwt": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
