Se agrega subir foto y obtener foto

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "backend": "file:",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "connect-multiparty": "^2.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
-    "njwt": "^2.0.1"
+    "njwt": "^2.0.1",
+    "node-thumbnail": "^0.15.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
